--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
     "commands": {
         "toggle-pin-tab": {
             "suggested_key": {
-                "default": "Alt+P"
+                "default": "Ctrl+P"
             },
             "description": "Toogle the pin stat of the current tab"
         }
